# wux

./: .gitignore  Cargo.toml  PLAN.md  README.md
install/: install.ps1  install.sh
src/: config.rs  lib.rs  main.rs  platform.rs  prompt.rs
src/commands/: config_cmd.rs  custom.rs  docker.rs  free.rs  info.rs  list.rs  mod.rs  nuke.rs  update.rs  whereis.rs
tests/: config_tests.rs  free_tests.rs  nuke_tests.rs
