[package]
name = "wux"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "wux"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
sysinfo = "0.30"
anyhow = "1"
colored = "2"
dirs = "5"
jwalk = "0.8"

[dev-dependencies]
tempfile = "3"
